2001-02-05  Eric Baudais  <baudais@okstate.edu>

	* configure.in: Added core-docs/lgpl/Makefile and 
	core-docs/lgpl/C/Makefile to AC_OUPUT.

2001-02-04  jacob berkman  <jacob@ximian.com>

	* Makefile.am:
	* configure.in:
	* grdb: remove grdb

Sat Feb 03 19:36:34 2001  George Lebl <jirka@5z.com>

	* Makefile.am:  Cleanup some OOOOOOOLD cruft

	* configure.in, Makefile.am, po/POTFILES.in, grdb/**/*:
	  Integrate grdb.  The author fell of the face of the planet and
	  didn't integrate it as was planned apparently, so here it goes,
	  still needs to get called from gsm, and either control-center
	  or something else monitoring theme changes

Wed Jan 31 20:36:25 2001  George Lebl <jirka@5z.com>

	* configure.in:  s/Gnumeric/gnome-core/  fix some cut'n'paste fun

2001-01-26  Marius Andreiana  <mandreiana@yahoo.com>
	
	* configure.in: Added ro (Romanian) to ALL_LINGUAS.

2001-01-18  Gregory Leblanc  <gleblanc@cu-portland.edu>

	* applets/desk-guide/help/C/desk-guide.sgml:
	* applets/desk-guide/help/de/desk-guide.sgml:
	* applets/fish/help/C/fish.sgml:
	* applets/fish/help/da/fish.sgml:
	* applets/fish/help/da/fish_applet.sgml:
	* applets/fish/help/no/fish_applet.sgml:
	* applets/gen_util/help/C/clock/clock.sgml:
	* applets/gen_util/help/C/mailcheck/mailcheck.sgml:
	* applets/gen_util/help/da/clock/clock.sgml:
	* applets/gen_util/help/da/mailcheck/mailcheck.sgml:
	* applets/gen_util/help/da/mailcheck/mailcheck_applet.sgml:
	* applets/gen_util/help/da/printer/printer.sgml:
	* applets/gen_util/help/da/printer/printer_applet.sgml:
	* applets/gen_util/help/de/clock.sgml:
	* applets/gen_util/help/de/gen_util_applet.sgml:
	* applets/gen_util/help/de/mailcheck.sgml:
	* applets/gen_util/help/no/gen_util_applet.sgml:
	* applets/gen_util/help/no/mailcheck.sgml:
	* applets/tasklist/help/C/tasklist.sgml:
	* gnome-terminal/C/gnome-terminal.sgml:
	* gnome-terminal/de/gnome-terminal.sgml:
	* gnome-terminal/es/gnome-terminal.sgml:
	* gsm/help/C/session.sgml:
	* panel/help/C/panel.sgml: