@@ -4,9 +4,13 @@ help_DATA = \
 	topic.dat	\
 	$(figs)
 
-EXTRA_DIST = $(app).sgml $(help_DATA)
+#Scrollkeeper related stuff
+omf_dir=$(top_srcdir)/omf-install
+
+EXTRA_DIST = $(app).sgml $(help_DATA) $(omffiles)
 
 all: index.html
+	-scrollkeeper-preinstall $(DESTDIR)$(helpdir)/$(app).sgml $(omffiles) $(omf_dir)/$(omffiles)
 
 index.html: $(app)/index.html
 	-cp $(app)/index.html .
