@@ -496,7 +496,12 @@ gsm/help/C/Makefile
 gsm/default.session.5
 gsm/gnome-session.1
 smproxy/Makefile
-intl/Makefile])
+grdb/Makefile
+grdb/data/Makefile
+grdb/src/Makefile
+grdb/capplet/Makefile
+intl/Makefile
+omf-install/Makefile])
 
 
 echo "This branch is unstable.  To use the stable branch, do:"
