@@ -1,0 +1,14 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <title>
+      The GNOME Panel Manual
+    </title>
+    <subject>
+      <category>Applications</category>
+    </subject>
+    <format mime="text/sgml"/>
+    <identifier url="panel.sgml"/>
+    <language code="C"/>
+  </resource>
+</omf>
