@@ -1,3 +1,15 @@
+2001-02-06  Dan Mueth   <dan@eazel.com>
+
+	(initial setup of SK - just doing for Panel Manual for now)
+	* omf-install/: created this directory
+	* omf-install/Makefile.am: new
+	* app-docs.make: updated for scrollkeeper(SK)
+	* applet-docs.make: updated for scrollkeeper(SK)
+	* configure.in: updated for scrollkeeper(SK)
+	* Makefile.am: updated for scrollkeeper(SK)
+	* panel/help/C/panel-C.omf: added
+	* panel/help/C/Makefile.am: updated for SK
+
 2001-02-05  Eric Baudais  <baudais@okstate.edu>
 
 	* configure.in: Added core-docs/lgpl/Makefile and 
